[WIP] Data Mahasiswa

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,6 +8,7 @@
     <string name="about_title">About Us</string>
     <string name="data_title">Riwayat Scan</string>
     <string name="scan_title">Scan Penugasan</string>
+    <string name="data_mahasiswa_title">Data Mahasiswa</string>
 
     <string name="text_about">RAJApps adalah aplikasi berbasis android yang digunakan untuk memindai kode pada lembar penugasan mahasiswa baru. </string>
 
